# asset_customization

./: pyproject.toml
asset_customization/: api.py  hooks.py  modules.txt  setup.py
asset_customization/asset_customization/doctype/asset_component_replacement/: asset_component_replacement.json  asset_component_replacement.py
asset_customization/asset_customization/doctype/asset_replacement/: asset_replacement.js  asset_replacement.json  asset_replacement.py
asset_customization/asset_customization/report/asset_component_replacement_history/: asset_component_replacement_history.js  asset_component_replacement_history.json  asset_component_replacement_history.py
asset_customization/public/js/: asset.js
